fixed the spacing

--- a/_includes/patterns/box/index.scss
+++ b/_includes/patterns/box/index.scss
@@ -17,7 +17,7 @@
         }
         .usa-card__body{
             display: flex;
-            gap: 1rem;
+            gap: 2.5rem;
         }
         .name{
             font-size: 1.25rem;
@@ -46,7 +46,7 @@
             font-weight: bold;
         }
         .content-list{
-            margin-left: 1rem;
+            margin-left: 2rem;
         }
         .usa-button-group{
             a{
